[gd_scene load_steps=6 format=3 uid="uid://dweskebgaykh3"]

[ext_resource type="Script" path="res://UI/PlayerChoice/ScreenPlayerChoice.gd" id="1_7twcq"]
[ext_resource type="FontFile" uid="uid://giavsib4gnp0" path="res://Assets/Fonts/Teachers/Teachers-Italic.ttf" id="1_a8day"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_soyim"]
bg_color = Color(0.6, 0.6, 0.6, 0.662745)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="LabelSettings" id="LabelSettings_1ss3k"]
font = ExtResource("1_a8day")
font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0f3qw"]
bg_color = Color(0.737255, 0.737255, 0.737255, 0.0196078)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.180392, 0.180392, 0.180392, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ScreenPlayerChoice" type="CanvasLayer"]
layer = 5
script = ExtResource("1_7twcq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.235938
anchor_top = 0.181481
anchor_right = 0.783854
anchor_bottom = 0.775926
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = -0.152648
anchor_right = 1.0
anchor_bottom = 0.771027
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_soyim")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
text = "Question here.......................................?"
label_settings = SubResource("LabelSettings_1ss3k")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0f3qw")

[node name="GridContainer" type="GridContainer" parent="Control/Panel/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = -40
theme_override_constants/v_separation = 0
columns = 4

[node name="HideButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.961901
anchor_top = -0.0950147
anchor_right = 0.961901
anchor_bottom = -0.0950147
offset_left = -74.92
offset_right = -6.10352e-05
offset_bottom = 43.456
grow_horizontal = 0
text = "HIDE"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/HideButton" to="." method="_on_hide_button_pressed"]
